<resources>
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">Quantity</string>
    <string name="value">2</string>
    <string name="priceH">Price</string>
    <string name="price">10</string>
    <string name="order">Order</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="topping">Topping</string>
    <string name="customerNamePlaceHolder">What\'s your name?</string>

</resources>
