<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.avinc.justjava.MainActivity"
    tools:showIn="@layout/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/customerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customerNamePlaceHolder"
        android:layout_marginBottom="16dp"
        android:inputType="textCapWords"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/topping"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        />

    <CheckBox
        android:id="@+id/hasChocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/hasWhippedCream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whippedCream"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:onClick="decrement"
            />

        <TextView
            android:id="@+id/valueP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textAllCaps="true"
            android:layout_marginTop="10px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:textSize="24sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:onClick="increment"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/priceH"
        android:textAllCaps="true"
        android:layout_margin="20px"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <TextView
        android:id="@+id/priceP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/order"
        android:onClick="submitOrder"/>

</LinearLayout>
</ScrollView>
